--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="logo">
       <img src="assets/Foto/Logo.png" alt="logo" class="logo-img">
-    <h2 class="logo-title">Logo</h2>
+    <h2 class="logo-title">Ramz</h2>
     </div>
     <nav>
       <ul>
