--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         </li>
       </ul>
     </nav>
-    <button class="btn" onclick="redirInstagram">Follow saya</button>
+    <button class="btn" onclick="redirInstagram()">Follow saya</button>
   </header>
   <div class="container">
     <div class="intro">
       <p class="title">Hello, Rama Jumikar</p>
       <p class="description">Web Developer</p>
-      <img src="/assets/Foto/rama.jpg" alt="rama foto 1" class="img-foto">
+      <img src="assets/Foto/rama.jpg" alt="rama foto 1" class="img-foto">
     </div>
     <div class="parallax">
       <div class="tentang">
         <p class="title">Gue adalah Programmer</p>
           <p class="description">"teruslah ngoding walaupun sering merah"</p>
           <div class="mt-10">
-            <button class="btn" onclick="redirWhatsapp">Mari Kerja Sama</button>
+            <button class="btn" onclick="redirWhatsapp()">Mari Kerja Sama</button>
           </div>
       </div>
       <div class="container" id="jasa">
